CREATE TYPE "competency_category" AS ENUM (
  'TECH',
  'SOFT',
  'DOMAIN',
  'VALUE'
);

CREATE TYPE "candidate_status" AS ENUM (
  'PENDING',
  'APPROVED',
  'REJECTED'
);

CREATE TYPE "experience_source" AS ENUM (
  'MANUAL',
  'AI_INTAKE'
);

CREATE TYPE "posting_source" AS ENUM (
  'CRAWLED',
  'MANUAL'
);

CREATE TYPE "posting_status" AS ENUM (
  'ACTIVE',
  'CLOSED',
  'DELETED',
  'COLLECT_FAILED'
);

CREATE TYPE "posting_question_status" AS ENUM (
  'NOT_CHECKED',
  'AVAILABLE',
  'NOT_AVAILABLE',
  'FAILED'
);

CREATE TYPE "question_source" AS ENUM (
  'CRAWLED',
  'MANUAL',
  'AI_EXTRACTED'
);

CREATE TYPE "evidence_verify_status" AS ENUM (
  'UNVERIFIED',
  'VERIFIED',
  'REJECTED'
);

CREATE TYPE "match_verdict" AS ENUM (
  'RECOMMEND',
  'CONDITIONAL',
  'HOLD'
);

CREATE TYPE "length_unit" AS ENUM (
  'CHARACTER',
  'BYTE'
);

CREATE TYPE "answer_source" AS ENUM (
  'MANUAL',
  'AI_GENERATED',
  'AI_ASSISTED'
);

CREATE TABLE "users" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "supabase_user_id" uuid UNIQUE NOT NULL,
  "email" varchar(255) UNIQUE NOT NULL,
  "name" varchar(100) NOT NULL,
  "profile_image_url" varchar(1000),
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "competencies" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar(100) UNIQUE NOT NULL,
  "category" competency_category NOT NULL,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "competency_aliases" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "competency_id" bigint NOT NULL,
  "alias" varchar(100) UNIQUE NOT NULL,
  "created_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "competency_candidates" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "job_posting_id" bigint NOT NULL,
  "raw_term" varchar(100) NOT NULL,
  "status" candidate_status NOT NULL DEFAULT 'PENDING',
  "merged_competency_id" bigint,
  "reviewed_by" bigint,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "reviewed_at" timestamptz
);

CREATE TABLE "experiences" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" bigint NOT NULL,
  "title" varchar(200) NOT NULL,
  "category" varchar(50),
  "period_text" varchar(50) NOT NULL,
  "sort_date" date,
  "situation" text,
  "task" text,
  "action" text,
  "result" text,
  "source" experience_source NOT NULL DEFAULT 'MANUAL',
  "source_ai_task_id" bigint,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "experience_competencies" (
  "experience_id" bigint NOT NULL,
  "competency_id" bigint NOT NULL,
  "strength" decimal(3,2) NOT NULL DEFAULT 0.7,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz NOT NULL DEFAULT (now()),
  PRIMARY KEY ("experience_id", "competency_id")
);

CREATE TABLE "companies" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar(200) NOT NULL,
  "normalized_name" varchar(200) UNIQUE NOT NULL,
  "career_url" varchar(1000),
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "job_postings" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "company_id" bigint NOT NULL,
  "position" varchar(200) NOT NULL,
  "content" text,
  "source_url" varchar(1000) UNIQUE,
  "deadline" date,
  "source" posting_source NOT NULL,
  "status" posting_status NOT NULL DEFAULT 'ACTIVE',
  "question_collection_status" posting_question_status NOT NULL DEFAULT 'NOT_CHECKED',
  "source_ai_task_id" bigint,
  "collected_at" timestamptz,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "posting_competencies" (
  "job_posting_id" bigint NOT NULL,
  "competency_id" bigint NOT NULL,
  "weight" decimal(3,2) NOT NULL,
  "evidence_line" text,
  "evidence_section" varchar(100),
  "evidence_start_offset" integer,
  "evidence_end_offset" integer,
  "extractor_version" varchar(50),
  "evidence_status" evidence_verify_status NOT NULL DEFAULT 'UNVERIFIED',
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz NOT NULL DEFAULT (now()),
  PRIMARY KEY ("job_posting_id", "competency_id")
);

CREATE TABLE "job_posting_questions" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "job_posting_id" bigint NOT NULL,
  "sequence" integer NOT NULL,
  "prompt_text" text NOT NULL,
  "intent" text,
  "length_limit" integer,
  "length_limit_unit" length_unit NOT NULL DEFAULT 'CHARACTER',
  "requirements" jsonb NOT NULL DEFAULT '[]',
  "source" question_source NOT NULL DEFAULT 'CRAWLED',
  "source_ai_task_id" bigint,
  "is_active" boolean NOT NULL DEFAULT true,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "bookmarks" (
  "user_id" bigint NOT NULL,
  "job_posting_id" bigint NOT NULL,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  PRIMARY KEY ("user_id", "job_posting_id")
);

CREATE TABLE "job_matches" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" bigint NOT NULL,
  "job_posting_id" bigint NOT NULL,
  "match_score" decimal(5,2) NOT NULL,
  "verdict" match_verdict NOT NULL,
  "headline" varchar(300),
  "summary" text,
  "coverage" jsonb NOT NULL DEFAULT '[]',
  "actions" jsonb NOT NULL DEFAULT '[]',
  "input_hash" varchar(64) NOT NULL,
  "source_ai_task_id" bigint,
  "computed_at" timestamptz NOT NULL,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "cover_letter_answers" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" bigint NOT NULL,
  "job_posting_question_id" bigint NOT NULL,
  "content" text NOT NULL,
  "char_count" integer NOT NULL DEFAULT 0,
  "byte_count" integer NOT NULL DEFAULT 0,
  "source" answer_source NOT NULL DEFAULT 'MANUAL',
  "source_ai_task_id" bigint,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "answer_requirement_results" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "answer_id" bigint NOT NULL,
  "requirement_seq" integer NOT NULL,
  "addressed" boolean NOT NULL DEFAULT false,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "answer_experiences" (
  "answer_id" bigint NOT NULL,
  "experience_id" bigint NOT NULL,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  PRIMARY KEY ("answer_id", "experience_id")
);

CREATE INDEX ON "competency_aliases" ("competency_id");

CREATE UNIQUE INDEX ON "competency_candidates" ("job_posting_id", "raw_term");

CREATE INDEX ON "competency_candidates" ("status");

CREATE INDEX ON "experiences" ("user_id", "sort_date");

CREATE INDEX ON "experience_competencies" ("competency_id");

CREATE INDEX ON "job_postings" ("status", "deadline");

CREATE INDEX ON "job_postings" ("company_id", "deadline");

CREATE INDEX ON "posting_competencies" ("competency_id");

CREATE UNIQUE INDEX ON "job_posting_questions" ("job_posting_id", "sequence");

CREATE INDEX ON "job_posting_questions" ("job_posting_id", "is_active");

CREATE UNIQUE INDEX ON "job_matches" ("user_id", "job_posting_id");

CREATE INDEX ON "job_matches" ("user_id", "match_score");

CREATE UNIQUE INDEX ON "cover_letter_answers" ("user_id", "job_posting_question_id");

CREATE INDEX ON "cover_letter_answers" ("job_posting_question_id");

CREATE UNIQUE INDEX ON "answer_requirement_results" ("answer_id", "requirement_seq");

CREATE INDEX ON "answer_experiences" ("experience_id");

COMMENT ON COLUMN "users"."supabase_user_id" IS 'Supabase Auth auth.users.id. 별도 DB 사용 시 논리 참조이며 물리 FK 없음';

COMMENT ON COLUMN "users"."email" IS '서비스 조회용 스냅샷. 인증의 원본은 Supabase Auth';

COMMENT ON COLUMN "competency_aliases"."alias" IS '별칭 하나는 하나의 표준 역량만 가리킴';

COMMENT ON COLUMN "experiences"."source_ai_task_id" IS 'AI Service DB ai_tasks.id 논리 참조';

COMMENT ON COLUMN "experience_competencies"."strength" IS 'CHECK 0~1은 career_fit_final_constraints.sql';

COMMENT ON COLUMN "companies"."normalized_name" IS '소문자화·법인표기/공백/특수문자 정규화 값';

COMMENT ON COLUMN "job_postings"."deadline" IS 'NULL이면 상시채용';

COMMENT ON COLUMN "job_postings"."source_ai_task_id" IS '공고 역량 추출 AI 작업 ID. 물리 FK 없음';

COMMENT ON COLUMN "posting_competencies"."weight" IS 'CHECK 0~1, offset 정합성은 career_fit_final_constraints.sql';

COMMENT ON TABLE "job_posting_questions" IS 'CHECK(sequence>0, length_limit>0)는 career_fit_final_constraints.sql';

COMMENT ON COLUMN "job_posting_questions"."requirements" IS '[{"seq":1,"content":"지원 동기"}]';

COMMENT ON COLUMN "job_posting_questions"."source_ai_task_id" IS '[리뷰 수정] POSTING_COMPETENCY_EXTRACTION 작업 ID 참조로 가정 — 별도 QUESTION_EXTRACTION task_type이 ai_service_final.dbml에 없어, 공고 역량 추출과 문항 추출을 같은 작업이 함께 처리한다고 해석함. 다른 파이프라인이면 팀 확인 필요';

COMMENT ON COLUMN "job_posting_questions"."is_active" IS '답변 이력 보존을 위해 수집 갱신 시 hard delete 대신 비활성화';

COMMENT ON TABLE "job_matches" IS '현재 최신 매칭 결과 1건만 유지. 사용자가 등록한 경험과 공고 요구 역량의 비교 결과';

COMMENT ON COLUMN "job_matches"."match_score" IS 'CHECK 0~100은 career_fit_final_constraints.sql';

COMMENT ON COLUMN "job_matches"."coverage" IS '역량별 점수와 근거 경험 ID 목록';

COMMENT ON COLUMN "job_matches"."input_hash" IS '경험/역량/공고 요구사항 변경 감지용';

COMMENT ON COLUMN "job_matches"."source_ai_task_id" IS 'MATCH 작업 ID. 물리 FK 없음';

COMMENT ON TABLE "cover_letter_answers" IS '버전 이력 없음. 최초 PUT은 INSERT, 이후 PUT은 현재 행 UPDATE. 저장됨 표시는 API 성공과 updated_at으로 표현';

COMMENT ON COLUMN "cover_letter_answers"."char_count" IS 'CHECK >= 0는 career_fit_final_constraints.sql';

COMMENT ON COLUMN "cover_letter_answers"."byte_count" IS 'CHECK >= 0는 career_fit_final_constraints.sql';

COMMENT ON COLUMN "cover_letter_answers"."source_ai_task_id" IS '초안 생성 작업 ID. 물리 FK 없음';

COMMENT ON TABLE "answer_requirement_results" IS '[리뷰] 현재 API 명세(api-spec-final-change-guide.md)의 어떤 응답에도 requirements/addressed가 노출되지 않음. 실제로 쓰는 화면이 있는지 팀 확인 후 유지/삭제 결정 필요';

COMMENT ON COLUMN "answer_requirement_results"."requirement_seq" IS 'job_posting_questions.requirements[].seq 논리 참조. CHECK > 0는 career_fit_final_constraints.sql';

ALTER TABLE "competency_aliases" ADD FOREIGN KEY ("competency_id") REFERENCES "competencies" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "competency_candidates" ADD FOREIGN KEY ("merged_competency_id") REFERENCES "competencies" ("id") ON DELETE SET NULL DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "competency_candidates" ADD FOREIGN KEY ("reviewed_by") REFERENCES "users" ("id") ON DELETE SET NULL DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "experiences" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "experience_competencies" ADD FOREIGN KEY ("experience_id") REFERENCES "experiences" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "experience_competencies" ADD FOREIGN KEY ("competency_id") REFERENCES "competencies" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "job_postings" ADD FOREIGN KEY ("company_id") REFERENCES "companies" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "posting_competencies" ADD FOREIGN KEY ("job_posting_id") REFERENCES "job_postings" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "posting_competencies" ADD FOREIGN KEY ("competency_id") REFERENCES "competencies" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "competency_candidates" ADD FOREIGN KEY ("job_posting_id") REFERENCES "job_postings" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "job_posting_questions" ADD FOREIGN KEY ("job_posting_id") REFERENCES "job_postings" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "bookmarks" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "bookmarks" ADD FOREIGN KEY ("job_posting_id") REFERENCES "job_postings" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "job_matches" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "job_matches" ADD FOREIGN KEY ("job_posting_id") REFERENCES "job_postings" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "cover_letter_answers" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "cover_letter_answers" ADD FOREIGN KEY ("job_posting_question_id") REFERENCES "job_posting_questions" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "answer_requirement_results" ADD FOREIGN KEY ("answer_id") REFERENCES "cover_letter_answers" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "answer_experiences" ADD FOREIGN KEY ("answer_id") REFERENCES "cover_letter_answers" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "answer_experiences" ADD FOREIGN KEY ("experience_id") REFERENCES "experiences" ("id") ON DELETE RESTRICT DEFERRABLE INITIALLY IMMEDIATE;
